Spotify-Discord.theme.scss
/* ... */
/* ==========================================================================
   DECOMMERCIALIZE - Remove premium, store, and monetization elements -  https://discord.com/channels/1015060230222131221/1434558507897585814/1434558511357886577
    The original uses very laggy things so dont use the original code
   ========================================================================== */


/* hide full screen profile editing tab */
#profile-modal-editing-panel {
  display: none;
}
@media (min-width: 929px) {
    .layoutContainer__9c3be.editingPanelExpanded__9c3be { /* REQUIRES MANUAL UPDATING: Discord class for profile effects, may break with updates */
        --custom-modal-v2-width: 962px;
        --custom-modal-v2-max-width: calc(100vw - var(--space-48) * 2);
        --custom-modal-v2-profile-width: min(max(300px, calc(45.5vw - var(--space-48) * 0.91)), 400px);
        grid-template-columns: 0 1fr;
    }
}

@media (min-width: 1169px) {
    .layoutContainer__9c3be.editingPanelExpanded__9c3be { /* REQUIRES MANUAL UPDATING: Discord class for profile effects, may break with updates */
        --custom-modal-v2-width: 962px;
        --custom-modal-v2-max-width: calc(100vw - var(--space-48) * 2);
        --custom-modal-v2-profile-width: min(max(300px, calc(45.5vw - var(--space-48) * 0.91)), 400px);
        grid-template-columns: 0 1fr;
    }
}

  /* hide promoted game tag */ 
#{$activeNowQuestWrapper} {
  display: none;
}
/* Hide store, shop, and quest links in friends list */
li > div:has(a[href="/store"]),
li > div:has(a[href="/shop"]),
li > div:has(a[href="/quest-home"]) {
  display: none;
}

// /* Hide premium profile decorations and effects */
#{$avatarDecoration}, #{$avatarStatusDecoration} {
  display: none;
}


/* Hide premium nameplate decorations */
#{ $memberNameplated }, #{$privateChannelDm}  {
    #{ $memberGradientContainer } {
        background: none !important;
    }

    #{ $memberVideoContainer } {
        display: none;
    }
}

/* Hide profile effects */
#{$userProfileEffects}, .profileEffects__0dd08 { /* REQUIRES MANUAL UPDATING: Discord class for profile effects, may break with updates */
  display: none;
}
#{$memberNameplated}>.container_df39b2 { /* REQUIRES MANUAL UPDATING: Discord class for profile effects, may break with updates */
  display: none;
}

/* ==========================================================================
   DISCORD UI REMOVALS
   ========================================================================== */
  
/* hide ignored users */
#{$messageGroupStart}:has(.blockedSystemMessage__7a70a) {/* REQUIRES MANUAL UPDATING: Discord class for profile effects, may break with updates */
  display: none;
}
/* remove close button full screen profile */
#{$userProfileInner} > div > #{$buttonV2} {
  display: none;
}

/* remove nitro badge */
#{$badgeListContainer} > div:has(>div> a[href="https://discord.com/settings/premium"]) {
  display: none;
}

/* remove boosting badge from profile */
#{$badgeListContainer} > a[href="https://discord.com/settings/premium"] {
  display: none;
}

/* remove quest completed badge */
#{$badgeListContainer} > a[href="https://discord.com/discovery/quests"] {
  display: none;
}

/* remove quests orb badge, this might not work for different locales */
#{$badgeListContainer} > a[aria-label="Collected the Orb Profile Badge"] {
  display: none;
}

/* Remove laggy backdrop blur from full screen user profile*/
#{$userProfileModalBackgroundImage}::after {
backdrop-filter: none;
filter: blur(3px);
}

/* textarea buttons */
 #{ $channelTextAreaButtonsContainer }>  #{ $channelTextAreaButton}#{ $channelTextAreaButtonInner}, // Current nitro gift button in text area
 .container_c0c49a, /* Requires manual updating: A/B nitro gift button in text area, may break with updates */
#{ $channelAppLauncherButtonContainer} {
  display: none;
}

/* hides clan tags */
#{$guildChatChipletContainerInner}  {
  display: none!important;
}

/* Remove emoijs in quickbar message reactions */
#{ $messageButtonWrapper } > span:has(#{ $embedEmoji }) { 
  display: none;
}

/* Remove separator in message button wrapper */
#{ $messageButtonWrapper } > #{ $messageButtonSeparator } {
  display: none;
}
/* ... */

